--- a/main.css
+++ b/main.css
@@ -22,7 +22,7 @@ main section h2, i.fa {
   font-size: 1em;
 }
 body { 
-  font-family:  "Raleway", "open-sans", sans-serif;
+  font-family:  "Lato", "open-sans", sans-serif;
   min-width: 200px;
 }
 
@@ -37,6 +37,7 @@ aside {
 aside a { color: #333; font-weight: 600; }
 
 main {
+  line-height: 1.4;
   font-size: 1.2em;
   text-align: left;
   width: 67%;
@@ -48,6 +49,10 @@ main {
 a {
   color: #000;
   text-decoration: none;
+}
+
+main a {
+  text-decoration: underline;
 }
 
 main > section {
@@ -231,3 +236,38 @@ input.inset:hover {
   padding-top: 30vh;
   min-height: 70vh;
 }
+
+.omniphobe {
+  font-variant: small-caps;
+}
+
+.name {
+  font-weight: 900;
+  text-transform: uppercase;
+}
+
+.videoWrapper {
+  display: block;
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 25px;
+  height: 0;
+  margin: auto;
+  /*width: 50%;
+  max-width: 560px;*/
+}
+
+.videoWrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+/*.youtube {
+  display: block;
+  margin: auto;
+  width: 560px;
+  max-width: 
+}*/
